@@ -1,4 +1,4 @@
-# LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.2254 $>
+# LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.2255 $>
 #
 #
 # [Note: This file does not mention every change made to the NetBSD source tree.
@@ -472,3 +472,4 @@ Changes from NetBSD 7.0 to NetBSD 8.0:
 		PT_GET_SIGMASK and PT_SET_SIGMASK [kamil 20170212]
 	postfix(1): Import version 3.1.4. [christos 20170213]
 	l2tp(4): Add L2TPv3 interface. [knakahara 20170216]
+	siginfo(2): Add new si_code for SIGTRAP: TRAP_DBREG [kamil 20170217]
